# midi_studio

./: .gitignore  CMakeLists.txt
midi_client/: CMakeLists.txt  main.cpp
src/: application.h  control_panel_component.cpp  control_panel_component.h  control_row.cpp  control_row.h  main.cpp  main_component.cpp  main_component.h  midi_input_port.cpp  midi_input_port.h  midi_io_row.cpp  midi_io_row.h  midi_manager.cpp  midi_manager.h  midi_output_port.cpp  midi_output_port.h  midi_server.cpp  midi_server.h  setup_menu_style.cpp  setup_menu_style.h
src/native/: application.mm
src/ui/widgets/: piano.cpp  piano.h
src/utils/: piano_keys.h
